Import Montserrat font from google font to use in place of Avenir Next

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/assets/logoicon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/logoicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Lendsqr Frontend Engineer Assessment" />
 
     <title>Lendsqr</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Inter&display=swap");
+    </style>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Montserrat";
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
