--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>Lendsqr</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Inter&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap");
     </style>
     <style>
       * {
